--- a/Ex1_fft_1D_sinwave.ipynb
+++ b/Ex1_fft_1D_sinwave.ipynb
@@ -6,6 +6,7 @@
       "name": "Ex1_fft_1D_sinwave.ipynb",
       "version": "0.3.2",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
